# weighing-game

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js  tailwind.css
src/: gamemodel.rs  lib.rs  logic.rs  main.rs
src/logic/: simulation.rs
src/ui/: animation.rs  display.rs  inputs.rs  layout.rs  mod.rs  styles.rs
src/ui/common/: header.rs  mod.rs  scale.rs
src/ui/game/: coin_bank.rs  config.rs  guessing.rs  help.rs  history.rs  mod.rs  results.rs  scale.rs  state.rs  view.rs
src/ui/game/config/: inputs.rs  mod.rs  prompt.rs  validation.rs
src/ui/solver/: controls.rs  display.rs  footer.rs  mod.rs  tree.rs  view.rs
src/ui/visuals/: mod.rs  scale.rs  tree.rs
tests/: logic_tests.rs
