[package]
name = "weighing-game"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
getrandom = { version = "0.4", features = ["wasm_js"] }
web-time = "1.1"
